[package]
name = "wisteria"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wist-lex = {path = "./wist-lex", version = "0.1.0"}
wist-utils = {path = "./wist-utils", version = "0.1.0"}

