[package]
name = "wisteria"
version = "0.1.0"
edition = "2021"

[lib]
name = "wisteria"
path = "src/lib.rs"

[profile.dev]
opt-level = 2 
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wist-lex = {path = "./wist-lex", version = "0.1.0"}
wist-macro = {path = "./wist-macro", version = "0.1.0"}
wist-utils = {path = "./wist-utils", version = "0.1.0"}

[[example]]
name = "c_expr"
path = "examples/c_expr/main.rs"
