[package]
name = "wist-lex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "regex-syntax",
  "lex-macro",
]

[dependencies]
lazy_static = "1.4.0"
regex-syntax = {path = "./regex-syntax", version = "0.1.*"}
lex-macro = {path = "./lex-macro", version = "0.1.*"}
wist-utils = {path = "../wist-utils", version = "0.1.0"}
