[package]
name = "wist-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["lex-macro", "parse-macro"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.23"
syn = { version = "1.0.*", features = ["extra-traits", "full", "derive"] }
proc-macro2 = "1.0.51"
wist-utils = {path = "../wist-utils", version = "0.1.0"}
lex-macro = {path = "./lex-macro", version = "0.1.*"}
parse-macro = {path = "./parse-macro", version = "0.1.*"}
